style/components/_news-item.scss
.news-item {
  margin: 0;

  padding: {
    top: 1em;
    right: 3em;
    bottom: 1em;
    left: 3em;
  }

  @include breakpoint($medium) {
    padding: {
      left: 1em;
      right: 1em;
    }
  }
}

.news-item__deleted {
  margin: 0;
  padding: 0 1em;
}

.news-item__parent {
  $shadow: 0 3px 6px 0 $gray-nickel;

  display: inline-block;
  margin: 0 0 2em;
  padding: 0.5em 1em;

  text-align: center;
  text-decoration: none;

  color: $torch-red;
  background-color: $white;
  box-shadow: $shadow;
  border: 1px solid $purple-pizzazz;
  border-radius: 2px;

  &:active {
    box-shadow: $shadow, inset 0 3px 6px 0 $gray-nickel;
  }
}

.news-item__text {
  @include post-text();
}

.news-item__no-comments {
  margin: 2em 0 0;
  padding: 0;

  font-size: 0.875rem;
  color: $gray;
}

.news-item__comments {
  margin: {
    top: 1em;
    right: -1rem;
    left: -1rem;
  }

  padding: 0;
  list-style-type: none;

  @include breakpoint($medium) {
    margin: {
      left: 0;
      right: 0;
    }
  }
}

